--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -76,7 +76,7 @@ function make_focus() {
 
     <TR>
      <TD>
-      <input type= button value ="Redefine Sequence" id = "add_to" onClick="get_seq(['args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__start', 'upstream', 'args__stop', 'downstream', 'args__add', 'args__1'],['seq','buttons'])"> 
+      <input type= button value ="Redefine Sequence" id = "add_to" onClick="get_seq(['args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__start', 'upstream', 'args__stop', 'downstream', 'args__add', 'args__1'],['seq'])"> 
    </TMPL_IF>
    </TR>
  </TABLE>
