changed default HSP lables to be drawn as staggered

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -545,7 +545,7 @@ onClick="loading([], ['results']); run([
 
  <TR>
   <Td>
-<font class="small">HSP Label options: <label><input class="backbox" type="radio" name="hsp_labels" id="hsp_labels" tabindex="1" value="0" />Don't draw</label><label><input class="backbox" type="radio" name="hsp_labels" id="hsp_labels" tabindex="1" value="staggered" />Draw Staggered</label><label><input class="backbox" type="radio" name="hsp_labels" id="hsp_labels" tabindex="1" value="linear" checked/>Draw Linear</label></font>
+<font class="small">HSP Label options: <label><input class="backbox" type="radio" name="hsp_labels" id="hsp_labels" tabindex="1" value="0" />Don't draw</label><label><input class="backbox" type="radio" name="hsp_labels" id="hsp_labels" tabindex="1" value="staggered" checked />Draw Staggered</label><label><input class="backbox" type="radio" name="hsp_labels" id="hsp_labels" tabindex="1" value="linear" />Draw Linear</label></font>
     </DIV>
   </TD>
  <TR>
