--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -9,11 +9,11 @@ function reset_updown() {
   kaj.GS('downstream',0);
 }
 
-function dynamic_button() {
-  kaj.GS('button1','');
-  kaj.GS('button2','');
-  kaj.GS('button3','');
-  kaj.GS('annotation_button','');
+function selectText() {
+
+}
+
+function onEnter() {
 }
 
 function waiting() {
@@ -58,7 +58,7 @@ function make_focus() {
  <TR> 
   <TD align = left valign = "middle">
    <form id="nt_stream" name="nt_stream">
-   <TMPL_VAR NAME = "UPSTREAM"> <INPUT type="text" id="upstream" style ="background-color: #F5F5DC" value= "<TMPL_VAR NAME="UPVALUE">">
+   <TMPL_VAR NAME = "UPSTREAM"> <INPUT type="text" id="upstream"  style ="background-color: #F5F5DC" value= "<TMPL_VAR NAME="UPVALUE">">
    <TMPL_VAR NAME="DOWNSTREAM"><INPUT type="text" id="downstream" style ="background-color: #F5F5DC" value= "<TMPL_VAR NAME="DOWNVALUE">">
    </form>
   </TD>
@@ -69,6 +69,7 @@ function make_focus() {
   <TR>
    <TD align = left valign = "middle">
    <input type = button value = "Reset" id="reset" onClick="reset_updown();get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])">
+   <!--<input type=button value="Select Sequence" id="select" onClick="selectText()">-->
       <input type= button value ="Add to Sequence" id = "add_to" onClick="get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream'],['seq'])"> 
    </TMPL_IF>
   </TR>
