changed IE warning message

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -16,7 +16,7 @@ function getBrowser()
 {
   if (navigator.appName == 'Microsoft Internet Explorer')
   {
-    alert('You are using Internet Explorer.  Unfortunately, CoGe does not support this browser and may not function appropriately.  Please download Firefox from http://www.mozilla.com/en-US/firefox/');
+    alert('You are using Internet Explorer.  Unfortunately, CoGe does not support this browser and may not function appropriately.  Please use Firefox which can be downloaded from http://www.mozilla.com/en-US/firefox/');
   }
 }
 </SCRIPT>
