made all image parameters' font small

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -495,24 +495,24 @@ onClick="loading([], ['results']); run([
 <TABLE class="basic">
  <TR>
   <TD>
-    <DIV>
+    <DIV class="small">
       Image Width (Pixels):
     </DIV>
   </TD>
   <TD>
-    <DIV>
+    <DIV class="small">
 	<input class="backbox" type="text" name="iw" id="iw" tabindex="1"  size="10" value="1000" />
     </DIV>
   </TD>
  </TR>
  <TR>
   <Td>
-    <DIV>
+    <DIV class="small">
       Image Height (Pixels):
     </DIV>
   </Td>
   <TD>
-    <DIV>
+    <DIV class="small">
 	<input class="backbox" type="text" name="ih" id="ih" tabindex="1"  size="10" value="150" />
     </DIV>
   </TD>
@@ -520,12 +520,12 @@ onClick="loading([], ['results']); run([
  </TR>
  <TR>
   <Td>
-    <DIV>
+    <DIV class="small">
       Feature Height (Pixels):
     </DIV>
   </Td>
   <TD>
-    <DIV>
+    <DIV class="small">
 	<input class="backbox" type="text" name="feat_h" id="feat_h" tabindex="1"  size="10" value="20" />
     </DIV>
   </TD>
