--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -68,6 +68,18 @@ function set_hsp_colors (type)
     kaj.GS('hsp3g',200)
     kaj.GS('hsp3b',200)
    }
+  else if (type == "fire")
+   {
+    kaj.GS('hsp1r',255)
+    kaj.GS('hsp1g',0)
+    kaj.GS('hsp1b',0)
+    kaj.GS('hsp2r',255)
+    kaj.GS('hsp2g',125)
+    kaj.GS('hsp2b',0)
+    kaj.GS('hsp3r',255)
+    kaj.GS('hsp3g',255)
+    kaj.GS('hsp3b',0)
+   }
   else 
    {
     kaj.GS('hsp1r',100)
@@ -644,7 +656,7 @@ onClick="loading([], ['results']); run([
    <TD class="small">
      B:<input class="backbox" type="text" name="hsp3b" id="hsp3b" tabindex="1"  size="3" value="0" />
   <tr>
-   <TD> <font class="small">Preset colors: <label><input class="backbox" type="radio" name="hspcolor" onClick="set_hsp_colors('default');"/>Default</label><label><input class="backbox" type="radio" name="hspcolor" onClick="set_hsp_colors('cblind');"/>Color blind</label><label><input class="backbox" type="radio" name="hspcolor" onClick="set_hsp_colors('rasta');"/>Rasta</label></font>
+   <TD> <font class="small">Preset colors: <label><input class="backbox" type="radio" name="hspcolor" onClick="set_hsp_colors('default');"/>Default</label><label><input class="backbox" type="radio" name="hspcolor" onClick="set_hsp_colors('cblind');"/>Color blind</label><label><input class="backbox" type="radio" name="hspcolor" onClick="set_hsp_colors('fire');"/>Fire</label><label><input class="backbox" type="radio" name="hspcolor" onClick="set_hsp_colors('rasta');"/>Rasta</label></font>
   </table>
  </table>
 </table>
