set image option menu to close by default

--- a/web/tmpl/SynView.tmpl
+++ b/web/tmpl/SynView.tmpl
@@ -549,7 +549,7 @@ onClick="loading([], ['results']); run([
   <DIV class="mainDiv">
    <DIV id="ip" class="topItem" onMouseOver="Init(this);changeColor('ip','#000099'); " onMouseOut="changeColor('ip','#009900');" >Image Parameters:</DIV>
    <DIV class="dropMenu">
-     <DIV class="subMenu" style="display:inline;">
+     <DIV class="subMenu" style="display:none;">
      <TABLE style="width: 100%;">
       <TR>
       <TD>
