--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -9,8 +9,8 @@ function reset_updown() {
   kaj.GS('downstream',0);
 }
 
-function selectText() {
-
+function makeTable() {
+  kaj.GS('maketable', '<div id ="annotation" style = "overflow: auto; height: 300px; width: auto;"></DIV');
 }
 
 function onEnter() {
@@ -32,12 +32,12 @@ function make_focus() {
    <TR>
       <TMPL_LOOP NAME="BUTTON_LOOP">
       <TD align=right valign="top">
-      <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq_and_button(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__<TMPL_VAR NAME=START>','args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__add', 'args__<TMPL_VAR NAME=ADD>'],['seq', 'buttons']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name']);make_focus();"></DIV>
+      <DIV id="button<TMPL_VAR NAME=BUTTON_NUM>"><input type=button value ="<TMPL_VAR NAME=BUTTON_NAME>" onClick="get_seq_and_button(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__<TMPL_VAR NAME=START>','args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__add', 'args__<TMPL_VAR NAME=ADD>'],['seq', 'buttons','add_more']);gen_title(['args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name']);make_focus();"></DIV>
       </TD>
       </TMPL_LOOP>
      <TMPL_IF NAME=FIND_FEATS>
      <TD align=right valign="top">
-     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="waiting();find_feats(['args__start', 'args__<TMPL_VAR NAME=START>', 'args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>'],['annotation'])"></DIV>
+     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="makeTable();waiting();find_feats(['args__start', 'args__<TMPL_VAR NAME=START>', 'args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>'],['annotation'])"></DIV>
      </TMPL_IF>
      </TD>
     </TD>
@@ -49,7 +49,9 @@ function make_focus() {
 <TABLE>
  <TR>
   <TD>
+  <div id = "maketable">
    <div id ="annotation"></DIV>
+   </div>
  <TR>
   <TD align = left valign = "middle" class="seqbackbox">
    <font class="oblique"><TMPL_VAR NAME="EXTEND"></font>
@@ -63,7 +65,7 @@ function make_focus() {
    </form>
   </TD>
   </TR>
-
+   </TMPL_IF>
    <TMPL_IF NAME="FEATURE">
 
   <TR>
@@ -77,11 +79,11 @@ function make_focus() {
 
     <TR>
      <TD>
-      <input type= button value ="Redefine Sequence" id = "add_to" onClick="get_seq(['args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__start', 'upstream', 'args__stop', 'downstream', 'args__add', 'args__1'],['seq'])"> 
+      <input type= button value ="Redefine Sequence" id = "add_to" onClick="get_seq_and_button(['args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__start', 'upstream', 'args__stop', 'downstream', 'args__add', 'args__1'],['seq','buttons','add_more'])"> 
    </TMPL_IF>
    </TR>
  </TABLE>
-</TMPL_IF>
+
 
 <TMPL_IF NAME="FEATUREBOX">
  <TABLE>
