fixed template formate so that annotations are show across entire window.

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -10,7 +10,7 @@ function reset_updown() {
 }
 
 function makeTable() {
-  kaj.GS('maketable', '<div id ="annotation" style = "overflow: auto; height: 300px; width: auto;"></DIV');
+  kaj.GS('maketable', '<div id ="annotation" style = "overflow: auto; height: 300px; width: auto;"></DIV>');
 }
 
 function onEnter() {
@@ -49,9 +49,9 @@ function make_focus() {
 <TABLE>
  <TR>
   <TD>
-  <div id = "maketable">
-   <div id ="annotation"></DIV>
-   </div>
+  <div id = "maketable"></div>
+</Table>
+<Table>
  <TR>
   <TD align = left valign = "middle" class="seqbackbox">
    <font class="oblique"><TMPL_VAR NAME="EXTEND"></font>
