added Location for genomic coordinates of HSP, valign=top for HSP sequences

--- a/web/tmpl/HSPView.tmpl
+++ b/web/tmpl/HSPView.tmpl
@@ -17,6 +17,10 @@
   <td class=data><TMPL_VAR NAME=Query>
   <td class=data><TMPL_VAR NAME=Subject>
  <tr>
+  <td class=title>Location
+  <td class=data><TMPL_VAR NAME=QLoc>
+  <td class=data><TMPL_VAR NAME=SLoc>
+ <tr>
   <td class=title>Percent Identity
   <td class=data><TMPL_VAR NAME=QIdent>
   <td class=data><TMPL_VAR NAME=SIdent>
@@ -54,8 +58,8 @@
   <td class=data>
  <tr>
   <td class=title>Sequence
-  <td class=data><TMPL_VAR NAME=qseq>
-  <td class=data><TMPL_VAR NAME=sseq>
+  <td class=data valign=top><TMPL_VAR NAME=qseq>
+  <td class=data valign=top><TMPL_VAR NAME=sseq>
  <tr>
   <td class=title>Alignment
   <td colspan = 2 class=data><TMPL_VAR NAME=align>
